# protoargs

./: .gitignore  Dockerfile  LICENSE  README.rst  build.sh  conanfile.py  entrypoint.sh  test.sh
doc/bash/: README.rst
doc/cpp/: README.rst
doc/go/: README.rst
doc/python/: README.rst
doc/rust/: README.rst
src/: CMakeLists.txt  Doxyfile  ProtoargsConfig.h.in
src/Common/include/: macro.h
src/Logger/: LICENSE  README.rst
src/Logger/include/: log.h
src/Protoargs/img/: bashschema.graphml  cppschema.graphml  goschema.graphml  intro.graphml  pythonschema.graphml  rustschema.graphml
src/Schema/: CMakeLists.txt
src/Schema/include/: cxxopts.hpp  multy_command.pa.h  multy_command.pb.h  multy_command_copy.pa.h  multy_command_copy.pb.h  multy_command_create.pa.h  multy_command_create.pb.h  schema.pa.h  schema.pb.h  simple.pa.h  simple.pb.h
src/Schema/src/: bools.proto  multy_command.proto  multy_command.py  multy_command_copy.proto  multy_command_copy_pa.py  multy_command_create.proto  multy_command_create_pa.py  multy_command_pa.py  schema.proto  schema.py  schema_pa.py  simple.proto  simple.py  simple_pa.py
src/Tests/: CMakeLists.txt  README.rst
src/Tests/include/: GTestGroups.h
src/Tests/src/: MultiCommandsTests.cpp  SchemaTests.cpp  SimpleTests.cpp
src/TestsBash/: test.sh
src/TestsBash/src/: bools_pa.sh  multy_command_copy_pa.sh  multy_command_create_pa.sh  multy_command_pa.sh  schema_pa.sh  simple_pa.sh  test_bools.sh  test_multy.sh  test_schema.sh  test_simple.sh
src/TestsGo/: main.go  multy_test.go  schema_pa_test.go  simple_pa_test.go  test.sh
src/TestsGo/multy_command_copy_pa/: multy_command_copy_pa.go
src/TestsGo/multy_command_create_pa/: multy_command_create_pa.go
src/TestsGo/multy_command_pa/: multy_command_pa.go
src/TestsGo/schema_pa/: schema_pa.go
src/TestsGo/simple_pa/: simple_pa.go
src/TestsPython/: test.sh
src/TestsPython/src/: test_bools.py  test_multy.py  test_schema.py  test_simple.py
src/TestsRust/: Cargo.toml  test.sh
src/TestsRust/src/: main.rs  multy_command_copy_pa.rs  multy_command_create_pa.rs  multy_command_pa.rs  multy_tests.rs  schema_pa.rs  schema_tests.rs  simple_pa.rs  simple_tests.rs
src/cxxopts/: LICENSE  README.rst
src/include/: Common  Logger  Schema
